# CPPDigitalLogic

./: CMakeLists.txt  README.md
Sources/: Main.cpp  QuineMcCluskey.hpp
